Anonymous | Login | 2019-12-11 00:46 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0025453 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2014-11-06 18:07 | 2015-05-14 15:32 | ||||
Reporter | shoogen | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | crash | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Linux | OS | Debian 6.0 | OS Version | 64 bit | ||||
Product Version | [OCCT] 6.7.1 | ||||||||
Target Version | [OCCT] 6.9.0 | Fixed in Version | [OCCT] 6.9.0 | ||||||
Summary | 0025453: SIGSEGV in BRepFill_Sweep::BuildShell | ||||||||
Description | Program received signal SIGSEGV, Segmentation fault. #0 0x00007fff7672b0aa in TopoDS_ListIteratorOfListOfShape::Initialize (this= 0x7fffffff99a8, L=...) at occt/inc/TCollection_ListIterator.gxx:48 0000001 0x00007fff7672e500 in TopoDS_Iterator::Initialize (this=0x7fffffff9990, S=..., cumOri=0, cumLoc=1) at occt/src/TopoDS/TopoDS_Iterator.cxx:39 0000002 0x00007fff7e0083c1 in TopoDS_Iterator::TopoDS_Iterator (this= 0x7fffffff9990, S=..., cumOri=0, cumLoc=1) at occt/inc/TopoDS_Iterator.lxx:36 #3 0x00007fff76731e6e in TopExp::Vertices (E=..., Vfirst=..., Vlast=..., CumOri=0) at occt/src/TopExp/TopExp.cxx:147 #4 0x00007fff7716bd19 in UpdateEdge (E=..., S=..., isUiso=0, ValIso=7.9696310257426868) at occt/src/BRepFill/BRepFill_Sweep.cxx:1496 #5 0x00007fff771729a6 in BRepFill_Sweep::BuildShell (this=0x7fffffffab90, IFirst=1, ILast=2, ReversedEdges=..., Tapes=..., Rails=..., ExtendFirst=0, ExtendLast=0) at occt/src/BRepFill/BRepFill_Sweep.cxx:2469 #6 0x00007fff77174aec in BRepFill_Sweep::Build (this=0x7fffffffab90, ReversedEdges=..., Tapes=..., Rails=..., Transition=BRepFill_Right, Continuity=GeomAbs_C2, Approx=GeomFill_Location, Degmax=11, Segmax=30) at occt/src/BRepFill/BRepFill_Sweep.cxx:2742 0000007 0x00007fff7715b6aa in BRepFill_PipeShell::Build (this=0x3b2f520) at occt/src/BRepFill/BRepFill_PipeShell.cxx:769 0000008 0x00007fff75010d64 in BRepOffsetAPI_MakePipeShell::Build (this= 0x7fffffffae00) at occt/src/BRepOffsetAPI/BRepOffsetAPI_MakePipeShell.cxx:258 | ||||||||
Steps To Reproduce | pload MODELING restore sweep9-draw-Sketch001.brep Sketch001 explode Sketch001 E wire Sweep-0-spine Sketch001_1 mksweep Sweep-0-spine setsweep -CF restore sweep9-draw-Sketch.brep Sketch trotate Sketch 0 0 0 1 0 0 90 addsweep Sketch buildsweep Sweep -C #An exception was caught 0x7fe51defa1f1 : OSD_SIGSEGV: SIGSEGV 'segmentation violation' detected. Address 10 #** Exception ** 0x7fe51defa1f1 : OSD_SIGSEGV: SIGSEGV 'segmentation violation' detected. Address 10 | ||||||||
Additional information and documentation updates | Might be related to 0024997 as the crash happens in an a ListOfShape Iterator | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_5(010) bug25453 | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|
(0034125) shoogen (reporter) 2014-11-06 18:13 edited on: 2014-11-06 18:19 |
version tested: V6_8_0_beta-101-g49cfd13 |
(0034170) msv (developer) 2014-11-07 20:49 |
The error is in the function BRepFill_Sweep::BuildShell, at line 2469. It attempts to call the function UpdateEdge with null shape. Actually, this null shape corresponds to the singularity caused by rotation of a vertex around the axis passed through the same vertex point. If we remove singularity by modifying the script so as to translate the Sketch by the vector (1,0,0) the script runs well and produces the result Sweep. Dear shoogen, is it really necessary to make a sweep with such singularity? |
(0034171) shoogen (reporter) 2014-11-07 21:09 |
Dear msv, No, in this case surface of revolution would create the wanted geometry. However, we allow our users, to select arbitrary geometry for sweeps. If OCCT would throw an exception in this case, it would be fine to me. |
(0034884) git (administrator) 2014-12-01 16:57 |
Branch CR25453 has been created by msv. SHA-1: 29b5b818ca1a73f3ab7439cd7c14c7265ca92b8f Detailed log of new commits: Author: msv Date: Mon Dec 1 16:54:33 2014 +0300 0025453: SIGSEGV in BRepFill_Sweep::BuildShell Fixed the bug causing exception when the first edge in generated sweep occurs to be degenerated. |
(0034885) msv (developer) 2014-12-01 17:01 |
The bug is fixed. Dear Julia, please review. |
(0034968) git (administrator) 2014-12-03 13:34 |
Branch CR25453_1 has been created by jgv. SHA-1: 2953397700a718380811dd3641ee949282b0b865 Detailed log of new commits: Author: jgv Date: Wed Dec 3 13:34:15 2014 +0300 Comments have been added. |
(0034969) jgv (developer) 2014-12-03 13:35 |
Please test the new branch CR25453_1. |
(0034972) git (administrator) 2014-12-03 15:50 |
Branch CR25453_1 has been updated forcibly by apv. SHA-1: 79d39bfadd2e4b6674c314400af9204d0c79b58b |
(0034973) apv (tester) 2014-12-03 15:54 |
Branch CR25453_1 has been rebased on the current master |
(0035033) git (administrator) 2014-12-04 19:22 |
Branch CR25453_1 has been updated by apv. SHA-1: 06f28c830428c9569cb33f5e58fc2bdaafe2533e Detailed log of new commits: Author: apv Date: Thu Dec 4 19:22:15 2014 +0300 Test-case for issue 0025453 |
(0035035) apv (tester) 2014-12-04 20:07 |
Dear BugMaster, Branch CR25453_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 79d39bfadd2e4b6674c314400af9204d0c79b58b Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 0 (1 on master) Regressions/Differences: Not detected Testing cases: bugs modalg_5(010) bug25453 - OK http://occt-tests/CR25453-1-master-occt/Debian60-64/bugs/modalg_5/bug25453.html [^] http://occt-tests/CR25453-1-master-occt/Windows-32-VC10/bugs/modalg_5/bug25453.html [^] Testing on Linux: Total MEMORY difference: 364028572 / 363569648 Total CPU difference: 44490.98999999992 / 47718.53000000004 Testing on Windows: Total MEMORY difference: 275817912 / 275750332 Total CPU difference: 38554.5625 / 40337.96875 |
(0036594) git (administrator) 2015-01-26 12:36 |
Branch CR25453_1 has been deleted by inv. SHA-1: 06f28c830428c9569cb33f5e58fc2bdaafe2533e |
(0036607) git (administrator) 2015-01-26 12:37 |
Branch CR25453 has been deleted by inv. SHA-1: 29b5b818ca1a73f3ab7439cd7c14c7265ca92b8f |
![]() |
|||
occt: master 21b7d8be
Timestamp: 2014-12-11 12:40:05 Author: msv Committer: bugmaster [ Details ] [ Diff ] |
0025453: SIGSEGV in BRepFill_Sweep::BuildShell Fixed the bug causing exception when the first edge in generated sweep occurs to be degenerated. Comments have been added. Test-case for issue 0025453 |
||
mod - src/BRepFill/BRepFill_Sweep.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_5/bug25453 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2014-11-06 18:07 | shoogen | New Issue | |
2014-11-06 18:07 | shoogen | Assigned To | => msv |
2014-11-06 18:07 | shoogen | File Added: sweep9.zip | |
2014-11-06 18:13 | shoogen | Note Added: 0034125 | |
2014-11-06 18:19 | shoogen | Note Edited: 0034125 | View Revisions |
2014-11-07 20:49 | msv | Note Added: 0034170 | |
2014-11-07 20:50 | msv | Assigned To | msv => shoogen |
2014-11-07 20:50 | msv | Status | new => feedback |
2014-11-07 21:09 | shoogen | Note Added: 0034171 | |
2014-11-19 21:05 | abv | Assigned To | shoogen => msv |
2014-12-01 16:57 | git | Note Added: 0034884 | |
2014-12-01 17:01 | msv | Note Added: 0034885 | |
2014-12-01 17:01 | msv | Assigned To | msv => jgv |
2014-12-01 17:01 | msv | Status | feedback => resolved |
2014-12-03 13:34 | git | Note Added: 0034968 | |
2014-12-03 13:35 | jgv | Note Added: 0034969 | |
2014-12-03 13:35 | jgv | Assigned To | jgv => bugmaster |
2014-12-03 13:35 | jgv | Status | resolved => reviewed |
2014-12-03 14:01 | mkv | Assigned To | bugmaster => apv |
2014-12-03 15:50 | git | Note Added: 0034972 | |
2014-12-03 15:54 | apv | Note Added: 0034973 | |
2014-12-04 19:22 | git | Note Added: 0035033 | |
2014-12-04 20:07 | apv | Note Added: 0035035 | |
2014-12-04 20:07 | apv | Assigned To | apv => bugmaster |
2014-12-04 20:07 | apv | Status | reviewed => tested |
2014-12-04 20:08 | apv | Test case number | => bugs modalg_5(010) bug25453 |
2014-12-05 11:59 | bugmaster | Target Version | => 7.0.0 |
2014-12-16 16:46 | bugmaster | Changeset attached | => occt master 21b7d8be |
2014-12-16 16:46 | bugmaster | Status | tested => verified |
2014-12-16 16:46 | bugmaster | Resolution | open => fixed |
2015-01-19 16:23 | bugmaster | Target Version | 7.0.0 => 6.9.0 |
2015-01-26 12:36 | git | Note Added: 0036594 | |
2015-01-26 12:37 | git | Note Added: 0036607 | |
2015-05-14 15:29 | aiv | Status | verified => closed |
2015-05-14 15:32 | aiv | Fixed in Version | => 6.9.0 |
Copyright © 2000 - 2019 MantisBT Team |